[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drobo-utils"
version = "9999"
description = "Drobo Management Protocol io package"
readme = "README.rst"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Peter Silva", email = "Peter.A.Silva@gmail.com"},
    {name = "Antoine Beaupré", email = "anarcat@debian.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
drobom = "drobom:main"
droboview = "drobom:view_main"

[tool.setuptools]
py-modules = ["Drobo", "DroboGUI", "DroboIOctl", "drobom"]
include-package-data = true
